[package]
name = "rust_ripper_wasm"
version = "0.1.0"
authors = ["gcastellov <dreeyfus20@hotmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.21"

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.48"
md5 = "0.7.0"
base64 = "0.13.0"
rs_sha256 = "0.1.3"
md4 = "0.9.0"
sha1 = "0.6.0"
ripemd320 = "0.9.0"
ripemd128 = "0.1.2"
whirlpool = "0.9.0"
md2 = "0.9.0"
ripemd160 = "0.9.1"
blake2 = "0.9.2"
tiger = "0.1.0"
digest = "0.9.0"
shabal = "0.3.0"
